--- a/.github/workflows/check-upstream-devel.yml
+++ b/.github/workflows/check-upstream-devel.yml
@@ -64,8 +64,9 @@ jobs:
 
       - name: Build new ros2-control-libraries humble image
         if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
+          architecture: amd64
           workspace: ros2-control-libraries
           base_tag: humble
           cl_branch: develop
@@ -83,8 +84,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build new ros2-modulo humble-devel image
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
+          architecture: amd64
           workspace: ros2-modulo
           base_tag: humble-devel-nightly
           modulo_branch: humble
@@ -108,8 +110,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build new ros2-modulo-control humble-devel image
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
+          architecture: amd64
           workspace: ros2-modulo-control
           base_tag: humble-devel-nightly
           dockerfile_extension: .humble
