Use develop branch for modulo humble-devel image (#65)
* Replace v2 with v3

* Add architecture to multi-arch build-push

* Only use multi-arch build-push

* Correct indentation

* Change the humble branches of modulo to develop

--- a/.github/actions/build-push-multi-arch/action.yml
+++ b/.github/actions/build-push-multi-arch/action.yml
@@ -5,6 +5,10 @@ branding:
   icon: file-plus
   color: gray-dark
 inputs:
+  architecture:
+    description: 'The desired architecture to build [`amd64` or `amd64 & arm64`]'
+    required: true
+    default: 'amd64 & arm64'
   workspace:
     description: 'The desired workspace'
     required: true
@@ -46,6 +50,17 @@ runs:
   steps:
     - name: Parse inputs
       run: |
+        ARCH="${{ inputs.architecture }}"
+        BUILD_FLAGS=()
+        if [[ "${ARCH}" == "amd64" ]]; then
+          BUILD_FLAGS+=(--platform=linux/amd64)
+        elif [[ "${ARCH}" == "amd64 & arm64" ]]; then
+          BUILD_FLAGS+=(--platform=linux/arm64,linux/amd64)
+        else
+          echo "::error::Invalid architecture. Choose between 'amd64 & arm64' and 'amd64'."
+          exit 1
+        fi
+        
         WORKSPACE_IMAGE=${{ inputs.workspace }}
         WORKSPACE_IMAGE=${WORKSPACE_IMAGE//[_]/-}
 
@@ -64,13 +79,14 @@ runs:
       shell: bash
 
     - name: Set up QEMU
+      if: ${{ inputs.architecture == 'amd64 & arm64' }}
       uses: docker/setup-qemu-action@v1
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Login to GitHub Package Registry
       run: echo "${{ inputs.secret }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
@@ -94,10 +110,11 @@ runs:
           exit 1
         fi
 
+        BUILD_FLAGS=${{ env.BUILD_FLAGS }}
         mkdir -p ${WORKSPACE_PATH}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE_PATH}/config/
         docker buildx build --file ${DOCKERFILE} \
-          --platform=linux/arm64,linux/amd64 \
+          ${BUILD_FLAGS[@]} \
           --push --tag ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME} \
           --build-arg BASE_TAG=${BASE_TAG} \
           --build-arg UBUNTU_VERSION=${UBUNTU_VERSION} \
