--- a/.github/actions/build-push-multi-arch/action.yml
+++ b/.github/actions/build-push-multi-arch/action.yml
@@ -60,6 +60,7 @@ runs:
           echo "::error::Invalid architecture. Choose between 'amd64 & arm64' and 'amd64'."
           exit 1
         fi
+        echo "BUILD_FLAGS=${BUILD_FLAGS}" >> $GITHUB_ENV
         
         WORKSPACE_IMAGE=${{ inputs.workspace }}
         WORKSPACE_IMAGE=${WORKSPACE_IMAGE//[_]/-}
